# emlio-lite

./: CMakeLists.txt  LICENSE  README.md  emlio.cpp  licenses.md
example/: CMakeLists.txt  example.cpp
include/emlio/: codec.hpp  mime.hpp
src/: CMakeLists.txt  base64.cpp  base64.hpp  binary.cpp  binary.hpp  bit7.cpp  bit7.hpp  bit8.cpp  bit8.hpp  codec.cpp  mime.cpp  q_codec.cpp  q_codec.hpp  quoted_printable.cpp  quoted_printable.hpp
test/: CMakeLists.txt
